[package]
name = "depyler-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Quality gates and metrics for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
smallvec = { version = "1.0", features = ["serde"] }
depyler-core = { path = "../depyler-core", version = "4.1.1" }
depyler-analyzer = { path = "../depyler-analyzer", version = "4.1.1" }
depyler-annotations = { path = "../depyler-annotations", version = "4.1.1" }
tempfile = "3.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
