[package]
name = "depyler-ruchy"
version = "3.2.0"
edition = "2021"
authors = ["Depyler Contributors"]
description = "Ruchy script format backend for Depyler Python-to-Rust transpiler"
repository = "https://github.com/depyler-lang/depyler"
license = "MIT OR Apache-2.0"
keywords = ["python", "rust", "transpiler", "ruchy", "script"]
categories = ["development-tools", "compilers"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ruchy language integration - updated to v1.5.0 (self-hosting!)
ruchy = { version = "1.5.0", optional = true }
pmcp = { version = "1.6.0", optional = true }
tokio = { version = "1.46", features = ["full"], optional = true }
polars = { version = "0.35", optional = true }

# AST and code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }

# Python parsing (from rustpython)
rustpython-parser = { version = "0.4", features = ["full-lexer"] }
rustpython-ast = { version = "0.4" }

# Internal dependencies
depyler-core = { path = "../depyler-core", version = "3.2.0" }

# Logging and diagnostics
tracing = "0.1"
colored = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.0"
quickcheck = "1.0"
criterion = "0.5"
tempfile = "3.3"
insta = { version = "1.40", features = ["yaml"] }

[features]
default = ["interpreter"]
interpreter = ["ruchy", "pmcp", "tokio"]
validation = []
dataframe = ["polars"]
actor = ["tokio"]

# Note: Benchmark disabled temporarily - needs update for new HirModule API (v3.2.0)
# [[bench]]
# name = "ruchy_transpilation"
# harness = false

[lib]
name = "depyler_ruchy"
path = "src/lib.rs"