[package]
name = "depyler-ruchy"
version = "3.22.0"
edition = "2021"
authors = ["Depyler Contributors"]
description = "Ruchy script format backend for Depyler Python-to-Rust transpiler"
repository = "https://github.com/depyler-lang/depyler"
license = "MIT OR Apache-2.0"
keywords = ["python", "rust", "transpiler", "ruchy", "script"]
categories = ["development-tools", "compilers"]

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Ruchy language integration - updated to v1.5.0 (self-hosting!)
ruchy = { version = "1.5.0", optional = true }
polars = { version = "0.51", optional = true }

# Internal dependencies
depyler-core = { path = "../depyler-core", version = "3.19.18" }

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.0"
quickcheck = "1.0"
criterion = "0.5"
tempfile = "3.3"
insta = { version = "1.40", features = ["yaml"] }

[features]
default = ["interpreter"]
interpreter = ["ruchy"]
validation = []
dataframe = ["polars"]
actor = []

# Note: Benchmark disabled temporarily - needs update for new HirModule API (v3.2.0)
# [[bench]]
# name = "ruchy_transpilation"
# harness = false

[lib]
name = "depyler_ruchy"
path = "src/lib.rs"
