[package]
name = "depyler-tooling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "IDE, debugging, documentation, and tooling support for the Depyler transpiler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
tracing.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
indexmap.workspace = true
smallvec.workspace = true
fnv.workspace = true
toml.workspace = true
depyler-annotations = { path = "../depyler-annotations", version = "4.1.1" }
depyler-hir = { path = "../depyler-hir", version = "4.1.1" }

[features]
default = []
# PHF compile-time perfect hash optimization
phf-lookup = ["phf"]
# Chaos engineering features
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]
# Generative repair
generative = []

[dependencies.phf]
version = "0.11"
features = ["macros"]
optional = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
