[package]
name = "depyler-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Property verification and formal methods for Depyler transpilation"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
depyler-core = { version = "3.17.0", path = "../depyler-core" }
depyler-annotations = { version = "3.17.0", path = "../depyler-annotations" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
quickcheck.workspace = true
proptest.workspace = true
smallvec = { version = "1.0", features = ["serde"] }

[dev-dependencies]
insta.workspace = true
quickcheck_macros = "1.0"
