[package]
name = "depyler-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Property verification and formal methods for Depyler transpilation"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
depyler-core = { path = "../depyler-core", version = "4.1.1" }
depyler-annotations = { path = "../depyler-annotations", version = "4.1.1" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
quickcheck.workspace = true
smallvec = { version = "1.0", features = ["serde"] }

[dev-dependencies]
insta.workspace = true
quickcheck_macros = "1.0"

[lints]
workspace = true
