[package]
name = "depyler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "depyler"
path = "src/main.rs"

[features]
default = []
coverage = [] # Feature flag to disable heavy property tests during coverage runs

[dependencies]
depyler-core = { version = "1.0.3", path = "../depyler-core" }
depyler-analyzer = { version = "1.0.3", path = "../depyler-analyzer" }
depyler-verify = { version = "1.0.3", path = "../depyler-verify" }
depyler-mcp = { version = "1.0.3", path = "../depyler-mcp" }
depyler-annotations = { version = "1.0.3", path = "../depyler-annotations" }
depyler-quality = { version = "1.0.3", path = "../depyler-quality" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
indicatif.workspace = true
colored.workspace = true
dialoguer.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
tokio.workspace = true
quote.workspace = true
smallvec.workspace = true

[[test]]
name = "functional_tests"
path = "../../tests/functional_tests.rs"

[[test]]
name = "integration_tests"
path = "../../tests/integration/transpilation_tests.rs"

[[test]]
name = "property_tests"
path = "../../tests/property_tests.rs"

[[test]]
name = "operator_tests"
path = "../../tests/operator_tests.rs"

[[test]]
name = "cli_tests"
path = "../../tests/cli_tests.rs"

[[test]]
name = "quality_gates_tests"
path = "../../tests/quality_gates_tests.rs"

[[test]]
name = "error_handling_tests"
path = "../../tests/error_handling_tests.rs"

[[test]]
name = "marco_polo_integration_test"
path = "../../tests/marco_polo_integration_test.rs"

[[test]]
name = "lambda_integration_test"
path = "../../tests/lambda_integration_test.rs"