[package]
name = "depyler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "depyler"
path = "src/main.rs"

[features]
default = []
coverage = [] # Feature flag to disable heavy property tests during coverage runs
ruchy = []
sovereign-types = ["depyler-core/sovereign-types"] # DEPYLER-1111: Enable TypeDB integration
decision-tracing = ["depyler-core/decision-tracing"] # DEPYLER-1148: CITL Flight Recorder
oracle-training = ["depyler-oracle/training"]  # Oracle CITL training pipeline (adds entrenar ~314 deps)
ml = ["dep:entrenar", "dep:alimentar", "dep:arrow", "oracle-training"] # Heavy ML training deps (adds ~850 transitive deps)

[dependencies]
depyler-core = { version = "3.24.0", path = "../depyler-core" }
depyler-analyzer = { version = "3.23.0", path = "../depyler-analyzer" }
depyler-verify = { version = "3.23.0", path = "../depyler-verify" }
depyler-mcp = { version = "3.23.0", path = "../depyler-mcp" }
depyler-annotations = { version = "3.23.0", path = "../depyler-annotations" }
depyler-quality = { version = "3.23.0", path = "../depyler-quality" }
depyler-oracle = { version = "3.24.0", path = "../depyler-oracle", default-features = false }
depyler-graph = { version = "3.23.0", path = "../depyler-graph" }
depyler-corpus = { version = "3.25.0", path = "../depyler-corpus" }
entrenar = { version = "0.5", optional = true }
alimentar = { version = "0.2.2", default-features = false, features = ["local"], optional = true }
arrow = { version = "54", default-features = false, features = ["json"], optional = true }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
indicatif.workspace = true
colored.workspace = true
dialoguer.workspace = true
rustpython-parser.workspace = true
tokio.workspace = true
notify = "8.0"
chrono = "0.4"
walkdir = "2.5"
rand.workspace = true
regex.workspace = true
syn = { version = "2", features = ["full", "parsing"] }
toml = "0.8"

# DEPYLER-CACHE-001: O(1) compilation cache
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
tempfile = "3.14"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
proptest.workspace = true
tokio.workspace = true
quote.workspace = true
smallvec.workspace = true
rand.workspace = true
md5.workspace = true
assert_cmd = "2.0"
predicates = "3.0"

# Examples
[[example]]
name = "cache_demo"
path = "examples/cache_demo.rs"

[[test]]
name = "functional_tests"
path = "../../tests/functional_tests.rs"

[[test]]
name = "integration_tests"
path = "../../tests/integration/transpilation_tests.rs"

[[test]]
name = "property_tests"
path = "../../tests/property_tests.rs"

[[test]]
name = "operator_tests"
path = "../../tests/operator_tests.rs"

[[test]]
name = "array_generation_test"
path = "../../tests/array_generation_test.rs"

[[test]]
name = "cli_tests"
path = "../../tests/cli_tests.rs"

[[test]]
name = "quality_gates_tests"
path = "../../tests/quality_gates_tests.rs"

[[test]]
name = "error_handling_tests"
path = "../../tests/error_handling_tests.rs"

[[test]]
name = "marco_polo_integration_test"
path = "../../tests/marco_polo_integration_test.rs"

[[test]]
name = "lambda_integration_test"
path = "../../tests/lambda_integration_test.rs"

[[test]]
name = "dict_assignment_test"
path = "../../tests/dict_assignment_test.rs"

[[test]]
name = "constants_test"
path = "../../tests/constants_test.rs"

[[test]]
name = "semantic_equivalence"
path = "../../tests/integration/semantic_equivalence.rs"

[[test]]
name = "property_tests_ast_roundtrip"
path = "../../tests/property_tests_ast_roundtrip.rs"

[[test]]
name = "property_tests_type_inference"
path = "../../tests/property_tests_type_inference.rs"

[[test]]
name = "property_tests_memory_safety"
path = "../../tests/property_tests_memory_safety.rs"

[[test]]
name = "edge_case_coverage"
path = "../../tests/edge_case_coverage.rs"

[[test]]
name = "error_path_coverage"
path = "../../tests/error_path_coverage.rs"

[[test]]
name = "boundary_value_tests"
path = "../../tests/boundary_value_tests.rs"

[[test]]
name = "coverage_analysis"
path = "../../tests/coverage_analysis.rs"

[[test]]
name = "property_test_benchmarks"
path = "../../tests/property_test_benchmarks.rs"

[[test]]
name = "example_validation"
path = "../../tests/example_validation.rs"

[[test]]
name = "integration_benchmarks"
path = "../../tests/integration_benchmarks.rs"

# Phase 8: Advanced Testing Infrastructure
[[test]]
name = "advanced_property_generators"
path = "../../tests/advanced_property_generators.rs"

[[test]]
name = "mutation_testing" 
path = "../../tests/mutation_testing.rs"

[[test]]
name = "fuzzing_tests"
path = "../../tests/fuzzing_tests.rs"

[[test]]
name = "interactive_doctests"
path = "../../tests/interactive_doctests.rs"

[[test]]
name = "specialized_coverage_testing"
path = "../../tests/specialized_coverage_testing.rs"

[[test]]
name = "quality_assurance_automation"
path = "../../tests/quality_assurance_automation.rs"

# v3.17.0 Phase 3: Coverage Improvement Tests
[[test]]
name = "v3_17_coverage_tests"
path = "../../tests/v3_17_coverage_tests.rs"

# Bug Regression Tests
[[test]]
name = "depyler_0023_rust_keywords_test"
path = "../../tests/depyler_0023_rust_keywords_test.rs"

[[test]]
name = "depyler_0024_copy_bug_test"
path = "../../tests/depyler_0024_copy_bug_test.rs"

[[test]]
name = "depyler_0264_dynamic_type_test"
path = "../../tests/depyler_0264_dynamic_type_test.rs"

[[test]]
name = "depyler_0265_iterator_deref_test"
path = "../../tests/depyler_0265_iterator_deref_test.rs"

[[test]]
name = "depyler_0266_boolean_conversion_test"
path = "../../tests/depyler_0266_boolean_conversion_test.rs"

[[test]]
name = "depyler_0267_index_access_test"
path = "../../tests/depyler_0267_index_access_test.rs"

[[test]]
name = "depyler_0268_index_negation_test"
path = "../../tests/depyler_0268_index_negation_test.rs"

[[test]]
name = "depyler_0269_function_borrowing_test"
path = "../../tests/depyler_0269_function_borrowing_test.rs"

[[test]]
name = "depyler_0270_result_unwrapping_test"
path = "../../tests/depyler_0270_result_unwrapping_test.rs"

[[test]]
name = "depyler_0271_main_return_type_test"
path = "../../tests/depyler_0271_main_return_type_test.rs"

[[test]]
name = "depyler_0272_unused_loop_vars_test"
path = "../../tests/depyler_0272_unused_loop_vars_test.rs"

