[workspace]
# This is a standalone package, not part of the main workspace

[package]
name = "comprehensive_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "comprehensive_cli"
path = "main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
