[package]
name = "depyler-playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive WebAssembly playground for Depyler Python-to-Rust transpiler"
keywords = ["python", "rust", "transpiler", "wasm", "playground"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
depyler-core = { path = "../../crates/depyler-core", features = ["wasm", "deterministic"] }
depyler-wasm = { path = "../../crates/depyler-wasm" }
wasm-bindgen.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Performance",
    "Navigator",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "Event",
    "CustomEvent",
] }
instant.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
wasm-opt = "0.116"       # Binaryen optimizer